--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.port=8080
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.idle-timeout=600000
